Bug 363830 - Search options panel/view auto-activates
Summary: Search options panel/view auto-activates
Status: RESOLVED FIXED
Alias: None
Product: khelpcenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Documentation Editorial Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-02 08:35 UTC by RJVB
Modified: 2016-06-25 13:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RJVB 2016-06-02 08:35:38 UTC
The latest khelpcentre introduces a new toolview, a Search Options panel. This auto-activates when it shouldn't; at start-up and at times during regular use too.

Reproducible: Always

Steps to Reproduce:
1. start khelpcentre 16.04.1, switch to the Contents toolview
2. wait to be certain it accepts to stay there (for now) then exit
3. launch again

Actual Results:  
The window will appear with the Contents panel active as expected, but within a second or so it switches to the Search Options panel.
If the system is really slow the window may open with that panel already active.

Expected Results:  
Window reappears with the previous state in which it will remain. The Search Options panel has no reason to activate automatically (at least I see none).

I would personally call this a major issue because the obligatory extra click caused by what feels like non deterministic behaviour gets very annoying very fast.
Comment 1 Luigi Toscano 2016-06-25 13:54:23 UTC
Git commit 3f886c79f2be70f984406901fbba0b70616f851e by Luigi Toscano.
Committed on 25/06/2016 at 13:52.
Pushed by ltoscano into branch 'Applications/16.04'.

Switch to search widget only on search

Do not switch on the search widget when the scope (set of enabled
search plugins) is changed or when something is typed in the search
text box. Only switch when the search button is pushed.

As there are some search providers enabled by default now, the search
button should be enabled by default (unless the user changed the
settings later), so even if the search pane is not visible the
default scenario (type something, push search) should work.
FIXED-IN: 5.7.1

M  +2    -1    navigator.cpp

http://commits.kde.org/khelpcenter/3f886c79f2be70f984406901fbba0b70616f851e